# candle-rec

./: .env  .gitignore  Cargo.toml
src/: bert.rs  cf_model.rs  datasets.rs  loss.rs  main.rs  metrics.rs  recommenders.rs  server.rs  types.rs  vector_store.rs
