[package]
name = "candle-rec"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = {version = "0.8.4" , features = ["accelerate", "metal"]}
candle-transformers = { version = "0.8.4",features = ["accelerate", "metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = {version = "0.8.4" , features = ["cuda"]}
candle-transformers = { version = "0.8.4",features = ["cuda"] }

[dependencies]
clap = { version = "4.5.32", features=["derive"] }
qdrant-client = "1.13.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version="0.6.2" , features = ["trace", "fs"]}
serde = { version = "1.0.219", features=["derive"] }
serde_json = "1.0.140"
csv = "1.3.1"
rand = "0.9.0"
candle-nn = "0.8.4"
candle-optimisers = "0.8.0"
anyhow = "1.0.97"
tokenizers = "0.21.1"
hf-hub = "0.4.2"
axum = "0.8.1"
